# smplrepo

./: CMakeLists.txt  README.md  prjs.pro
jpeg/: CMakeLists.txt  jmorecfg.h  jpeg.pro
websock/: CMakeLists.txt  DataStream.h  camerastream.cpp  camerastream.h  cl_main_object.cpp  cl_main_object.h  common.h  dialogsetfilename.cpp  dialogsetfilename.h  dialogsetfilename.ui  dialogtcphost.cpp  dialogtcphost.h  dialogtcphost.ui  jpegenc.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc  tcpserver.cpp  tcpserver.h  tcpsocket.cpp  tcpsocket.h  testsender.cpp  testsender.h  videodata.cpp  videodata.h  videoframe.cpp  videoframe.h  videoframe.ui  videosurface.cpp  websock.cpp  websock.h  websock.pro
websock/cl/: convert.cl
websock/cuda/: convert.cu  convert_cuda.h  cudaobj.cpp  cudaobj.h
websock/ffmpeg/: ffmpeg.pri
websock/ffmpeg/lib/: avutil-55.def
websock/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
websock/gl/: frame.frag  frame.vert  frame_rgb.frag
